[package]
description = "Created with Anchor"
edition = "2018"
name = "anchor-escrow"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_escrow"

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = {version = "0.19.0"}
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}

lazy_static = "1.4.0"

arkworks-gadgets = { version = "0.4.5", default-features = false }
arkworks-utils = { version = "0.4.5", default-features = false }

solana-program = "1.9.1"
itertools = "0.9.0"
# solana-sdk = "1.9.1"
# solana-program-runtime = "1.9.1"
[dependencies.ark-bls12-381]
version = "^0.3.0"
features = ["curve"]
default-features = false

[dependencies.ark-bn254]
version = "^0.3.0"
features = ["curve"]
default-features = false

[dependencies.ark-crypto-primitives]
version = "^0.3.0"
features = ["r1cs"]
default-features = false

[dependencies.ark-ec]
version = "^0.3.0"
default-features = false

[dependencies.ark-ed-on-bls12-381]
version = "^0.3.0"
features = ["r1cs"]
default-features = false

[dependencies.ark-ed-on-bn254]
version = "^0.3.0"
features = ["r1cs"]
default-features = false

[dependencies.ark-ff]
version = "^0.3.0"
default-features = false

[dependencies.ark-groth16]
version = "^0.3.0"
default-features = false

[dependencies.ark-marlin]
version = "^0.3.0"
default-features = false

[dependencies.ark-poly]
version = "^0.3.0"
default-features = false

[dependencies.ark-poly-commit]
version = "^0.3.0"
default-features = false

[dependencies.ark-r1cs-std]
version = "^0.3.0"
default-features = false

[dependencies.ark-relations]
version = "^0.3.0"
default-features = false

[dependencies.ark-serialize]
version = "^0.3.0"
default-features = false

[dependencies.ark-snark]
version = "^0.3.0"
default-features = false

[dependencies.ark-std]
version = "^0.3.0"
default-features = false

[dependencies.blake2]
version = "0.9"
default-features = false

[dependencies.digest]
version = "0.9"

[dependencies.ethabi]
version = "15.0.0"
default-features = false

[dependencies.hex-literal]
version = "0.3.4"

[dependencies.paste]
version = "1.0.5"

[dependencies.tiny-keccak]
version = "2.0.2"
features = ["keccak"]

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
all = ["poseidon_bls381_x3_5", "poseidon_bls381_x3_3", "poseidon_bls381_x5_5", "poseidon_bls381_x5_3", "poseidon_bls381_x17_5", "poseidon_bls381_x17_3", "poseidon_bn254_x3_5", "poseidon_bn254_x3_3", "poseidon_bn254_x5_5", "poseidon_bn254_x5_4", "poseidon_bn254_x5_3", "poseidon_bn254_x5_2", "poseidon_bn254_x17_5", "poseidon_bn254_x17_3"]
default = ["std", "default_poseidon", "r1cs", "default_mimc", "etherhash"]
default_mimc = ["mimc_220_ed_on_bn254"]
default_poseidon = ["poseidon_bls381_x3_3", "poseidon_bls381_x3_5", "poseidon_bls381_x5_5", "poseidon_bls381_x5_3", "poseidon_bn254_x5_5", "poseidon_bn254_x5_4", "poseidon_bn254_x5_3", "poseidon_bn254_x5_2", "poseidon_bls381_x17_5", "poseidon_bls381_x17_3", "poseidon_bn254_x17_5", "poseidon_bn254_x17_3", "poseidon_bn254_x3_3", "poseidon_bn254_x3_5"]
etherhash = []
mimc_220_ed_on_bn254 = []
poseidon_bls381_x17_3 = []
poseidon_bls381_x17_5 = []
poseidon_bls381_x3_3 = []
poseidon_bls381_x3_5 = []
poseidon_bls381_x5_3 = []
poseidon_bls381_x5_5 = []
poseidon_bn254_x17_3 = []
poseidon_bn254_x17_5 = []
poseidon_bn254_x3_3 = []
poseidon_bn254_x3_5 = []
poseidon_bn254_x5_2 = []
poseidon_bn254_x5_3 = []
poseidon_bn254_x5_4 = []
poseidon_bn254_x5_5 = []
r1cs = []
std = ["ark-std/std"]
test = ["poseidon_bn254_x5_5", "poseidon_bn254_x5_3"]
