[package]
description = "Created with Anchor"
edition = "2018"
name = "anchor-escrow"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_escrow"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = {version = "0.18.2"}
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}

lazy_static = "1.4.0"

ark-bn254 = {version = "^0.3.0", default-features = false, features = ["curve"]}
ark-crypto-primitives = {version = "^0.3.0", features = ["r1cs"], default-features = false}
ark-ff = {version = "^0.3.0", default-features = false}
ark-std = {version = "^0.3.0", default-features = false}

arkworks-gadgets = {path = "../../../arkworks-gadgets/arkworks-gadgets"}
arkworks-utils = {path = "../../../arkworks-gadgets/arkworks-utils"}
# arkworks-utils = { git = "https://github.com/Cardosaum/arkworks-gadgets/tree/master/arkworks-utils", branch = "bugfix/handle_infinte_loop" }
# arkworks-gadgets = {version = "0.4.5", default-features = false}
